5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1839_2221.log
== TEST (2019-06-26 13:05:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	print(i.min())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:07:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	print(sum(i.min())/size(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:08:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	print(i.min())
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:09:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	t = i.min()
print(sum(i)/size(i))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:09:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	t = i.min()
print(sum(i)/size(i))
	

-- EXECUTION TIME:
1.21038
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
6.325
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:10:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	t = i.min()
print(size(i)/sum(t)
	

-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:10:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	t = i.min()
print(size(i)/sum(i)
	

-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:10:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	t = i.min()
print(size(i)/sum(i)
-- ERROR:
File "XXXX", line 7
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:10:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	t = i.min()
	print(size(i)/sum(i)
-- ERROR:
File "XXXX", line 7
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:10:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	t = i.min()
	
print(size(i)/sum(t))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:11:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	t = i.min()
	
print(sum(t)/size(t))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:11:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	t = i.min()
	
print(sum(t)/size(t))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:11:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	t = i.min()
	
print(sum(i)/size(i))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:11:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
for i in m:
	t = i.min()
	
print(sum(t)/size(i))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:14:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
h = 0
c = 0

for i in range(shape(m)[0]):
	h+= (min(m[i,:]))
	c+=1
print(round(h/c),2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:14:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
h = 0
c = 0

for i in range(shape(m)[0]):
	h+= (min(m[i,:]))
	c+=1
print(round(h/c),2)

-- EXECUTION TIME:
1.05614
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
5.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:14:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
h = 0
c = 0

for i in range(shape(m)[0]):
	h+= (min(m[i,:]))
	c+=1
print(round(h/c),2)

-- EXECUTION TIME:
1.26797
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
5.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:15:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
h = 0
c = 0

for i in range(shape(m)[0]):
	h+= (min(m[i,:]))
	c+=1
print(round((h/c),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:15:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("")))
h = 0
c = 0

for i in range(shape(m)[0]):
	h+= (min(m[i,:]))
	c+=1
print(round((h/c),2))

-- EXECUTION TIME:
1.0891
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
4.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
